*** Unreleased ***

*** Version 20.04.06       (2020-11-24)   ***
- Enhancements
Move function calculPresence in dedicated class (WorkingHours)
Allows more permissive entries in working hours

-Fixes
fix substraction of absences hours in weekly quota
Save HTTPS URL in config controller

*** Version 20.04.05       (2020-10-02)   ***
- Enhancements
Use fine tuning of hours in holidays forms

-Fixes
Fix agent template, select service hours
Prevent duplicating working hours via clone option

*** Version 20.04.04       (2020-09-07)   ***
-Fixes
fix retrieving of start hour when adding absence

*** Version 20.04.03       (2020-08-27)   ***
-Fixes
Fix removal of reccuring absences
Set default value for start and end hours when saving an absence
Fix admin info and absences info forms

*** Version 20.04.02       (2020-08-04)   ***
-Fixes
Fix the control of plannings when an absence is recorded

*** Version 20.04.01       (2020-08-03)   ***
-Fixes
Use fine tuning of hours in absence forms

*** Version 20.04.00       (2020-06-15)   ***
- Enhancements
Include symfony framework
Move absences pages into a symfony controller
Move absences/info pages into a symfony controller
Move admin/info pages into a symfony controller
Move agents pages into a symfony controller
Move configuration page into a symfony controller
Move help page into a symfony controller
Move holidays pages into a symfony controller
Ability to check permissions on symfony kernel.request event
Add unit tests
Ability to request holiday in days (optionnal)
Ability to request holiday on half day
Add a second notifications workflow on absences
Ability to add documents on absences
Ability to change user password by typing a new one into a form
Add free breaktimes on working hours
Hamac import : Add intermediate validation and information logging
Shows Agendas/Synchro tab on agent's pages when Hamac-csv param is set
Disallow changing passwords in demo mode
Allow selection of days in other months on datepickers